# tarea2_eda

./: results.csv  results_new.csv  results_old.csv  results_small.csv
cpp/: CMakeLists.txt  main.cpp  test.cpp
cpp/include/: linkedList.hpp  node.hpp  poscode.hpp  test.hpp  utils.hpp
cpp/src/: linkedList.cpp  node.cpp  poscode.cpp  test.cpp  utils.cpp
python/: generate_codes.py  generate_plots.py
